fix efficiency bar text wrapping sometimes

--- a/styles.css
+++ b/styles.css
@@ -1012,6 +1012,7 @@ Info dialogs for Empire and Alliance
 .planetMapEfficiencyBar {
 	z-index: 2;
 	height:100%;
+	white-space: nowrap;
 }
 .planetMapTileActionContainer {
 	z-index: 3;
